--- a/public/index.html
+++ b/public/index.html
@@ -6,18 +6,18 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta http-equiv="X-UA-Compatible" content="ie=edge" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.4.1/semantic.min.css" />
-  <link rel="stylesheet" href="style.css" />
+  <link rel="stylesheet" href="./style.css" />
   <title>Fitness Tracker</title>
 </head>
 
 <body>
   <nav>
-    <a href="/">Fitness Tracker</a>
-    <a href="/stats">Dashboard</a>
+    <h1>Fitness Tracker</h1>
+    <a href="/">Start</a>
+    <a href="/stats">Progress Dashboard</a>
   </nav>
   <div class="wrapper workout">
     <header>
-      <h1>Fitness Tracker</h1>
     </header>
     <div class="ui container workout">
       <div class="ui raised card m-auto">
@@ -41,11 +41,9 @@
   <div id="toast">
     Workout Added Successfully!
   </div>
-  <script src="./js/api.js"></script>
-  <script src="./js/exercise.js"></script>
-  <script src="./js/index.js"></script>
-  <script src="./js/stats.js"></script>
-  <script src="./js/workout.js"></script>
+  <script src="./api.js"></script>
+  <script src="./workout.js"></script>
+  <script src="./index.js"></script>
 </body>
 
 </html>
