--- a/public/stats.html
+++ b/public/stats.html
@@ -14,11 +14,13 @@
     <title>Fitness Chart</title>
   </head>
   <nav>
-    <a href="/">Fitness Tracker</a>
+    <h1>Fitness Tracker</h1>
+    <a href="/">Start</a>
+    <a href="/stats">Progress Dashboard</a>
   </nav>
   <body>
     <div class="container mt">
-      <h1 class="text-center">Workout Dashboard</h1>
+      <h1 class="text-center">Workout Progress Dashboard</h1>
       <div class="row mt">
         <div class="col-md-6">
           <canvas id="canvas"></canvas>
